# news-mcp

./: AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Dockerfile.release  Dockerfile.scratch  README.md  README_RU.md  config.example.toml  deny.toml
.github/workflows/: ci.yml
docs/: design.md
src/cache/: news_cache.rs
src/cli/: serve_cmd.rs
src/config/: mod.rs
src/poller/: news_poller.rs
src/service/: news_service.rs  newsnow_service.rs
src/tools/: get_article_content.rs  get_categories.rs  get_news.rs  mod.rs
src/utils/: mod.rs
tests/e2e/: integration_tests.rs
tests/unit/: cache_tests.rs  service_tests.rs  tool_tests.rs
